# tree-sitter-cereka

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.crka  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-cereka.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cereka/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCereka/: cereka.h
bindings/swift/TreeSitterCerekaTests/: TreeSitterCerekaTests.swift
queries/: highlights.scm
src/: grammar.json  parser.c
