[package]
name = "tree-sitter-cereka"
description = "Script language for Cereka, a simple visual novel engine written in C++"
version = "0.1.0"
authors = ["Danial Haikal <danialhaikalsanusi@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cereka"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mishoshup/tree-sitter-cereka.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
